--- a/package.json
+++ b/package.json
@@ -2,14 +2,31 @@
   "name": "week3-402",
   "version": "1.0.0",
   "description": "",
-  "license": "ISC",
-  "author": "Kasachin Geberetinsia",
-  "type": "module",
   "main": "index.js",
+  "workspaces": [
+    "client",
+    "server"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    
+    "start": "npm-run-all --parallel start:client start:server",
+    "start:server": "npm --prefix server run dev",
+    "start:client": "npm --prefix client run dev"
+
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kasachinberihun/comp229-f25-402-week3.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/Kasachinberihun/comp229-f25-402-week3/issues"
+  },
+  "homepage": "https://github.com/Kasachinberihun/comp229-f25-402-week3#readme",
   "dependencies": {
-    "express": "^5.1.0"
+    "npm-run-all": "^4.1.5"
   }
 }
