--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
     "server"
   ],
   "scripts": {
-    
     "start": "npm-run-all --parallel start:client start:server",
     "start:server": "npm --prefix server run dev",
     "start:client": "npm --prefix client run dev"
-
   },
   "repository": {
     "type": "git",
@@ -27,6 +25,7 @@
   },
   "homepage": "https://github.com/Kasachinberihun/comp229-f25-402-week3#readme",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "npm-run-all": "^4.1.5"
   }
 }
