Update portfolio files and add .env.sample

--- a/server/.env.sample
+++ b/server/.env.sample
@@ -1,1 +1,13 @@
-MONGODB_URI=<<insert your MongoDB connection string here>>
+
+# MongoDB connection string
+MONGODB_URI=your_mongo_connection_string_here
+
+# JWT secret (used for signing tokens)
+JWT_SECRET=your_jwt_secret_here
+
+# Application port
+PORT=3000
+
+# Environment setting (development, production, etc.)
+NODE_ENV=development
+
