--- a/package.json
+++ b/package.json
@@ -25,7 +25,13 @@
   },
   "homepage": "https://github.com/Kasachinberihun/comp229-f25-402-week3#readme",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.2",
+    "morgan": "^1.10.1",
     "npm-run-all": "^4.1.5"
   }
 }
