--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "express": "^5.1.0",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1"
