Finalize A2: user routes + server setup

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
+
 {
-  "name": "comp229-f25-402-week2",
+  "name": "client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -20,11 +21,9 @@
     "@eslint/js": "^9.36.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "concurrently": "^9.2.1",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.4.0",
-    "nodemon": "^3.1.10"
+    "globals": "^16.4.0"
   }
 }
