--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "week3-402",
+  "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "license": "ISC",
+  "description": "Portfolio Application – Node.js, Express REST APIs & MongoDB",
   "author": "Kasachin Geberetinsia",
+  "license": "ISC",
   "type": "module",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1"
   },
